--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<h1 style = "color : blue">This web page is blank.</h1>
 		<h2 style = "color : Purple">(Well mostly blank, anyway!)</h2>
 		<ul>
-			<li></li>
+			<li>"With greate power, comes greate responsibility" -- Uncle Ben Parker</li>
 			<li></li>
 		</ul>
 	</body>
