--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<ul>
 			<li>"With greate power, comes greate responsibility" -- Uncle Ben Parker</li>
 			<li>"You can observe a lot by watching" -- Yogi Berra</li>
+			<li>"Talk is cheap. Show me the code." -- Linus Torvalds</li>
 		</ul>
 	</body>
 </html>
