--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			<li>"With greate power, comes greate responsibility" -- Uncle Ben Parker</li>
 			<li>"You can observe a lot by watching" -- Yogi Berra</li>
 			<li>"Talk is cheap. Show me the code." -- Linus Torvalds</li>
+			<li>"Every good work of software starts by scratching a developer's personal itch" -- Eric S. Raymond</li>
 		</ul>
 	</body>
 </html>
