--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 			<li>"Never tell me the odds" -- Hann Solo</li>
 			<li>"Example, you know, far outweight precept" --Thomas Jefarson</li>
 			<li>"I love deadlines. I love the whooshing sound they make as they go by" -- Daglas Adams</li>
+			<li>"Nothing more dangarous than an idea, when it's the only one we have." -- Emile Chartiner</li>
+			<li>"Life's like a novel, Write your own ending" -- Kermit the Frog</li>
 		</ul>
 	</body>
 </html>
