--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<h1>This web page is blank.</h1>
 		<h2>(Well mostly blank, anyway!)</h2>
 		<ul>
+			<li>"You can't depend on your eyes when your imagnation is out of focus" -- Mark Twain</li>
 			<li>"With greate power, comes greate responsibility" -- Uncle Ben Parker</li>
 			<li>"You can observe a lot by watching" -- Yogi Berra</li>
 			<li>"Talk is cheap. Show me the code." -- Linus Torvalds</li>
