--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<h1>A page of quotation.</h1>
-		<h2>(Well mostly blank, anyway!)</h2>
+		<h2>...for your reading pleasure</h2>
 		<ul>
 			<li>"You can't depend on your eyes when your imagnation is out of focus" -- Mark Twain</li>
 			<li>"With greate power, comes greate responsibility" -- Uncle Ben Parker</li>
