--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<li>"I love deadlines. I love the whooshing sound they make as they go by" -- Daglas Adams</li>
 			<li>"Nothing more dangarous than an idea, when it's the only one we have." -- Emile Chartiner</li>
 			<li>"Life's like a novel, Write your own ending" -- Kermit the Frog</li>
+			<li>"Live long and prosper" -- S'chn T'gai Spock</li>
 		</ul>
 	</body>
 </html>
